# patentkit

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.claude/skills/deploy-gcp/: SKILL.md
.claude/skills/eval-e2e/: SKILL.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MCP_REMOTE.md
docs/assets/: demo.tape
docs/evals/: 2026-06-10-ipr-es-eval.md  2026-06-10-real-ipr-voicetech-eval.md
examples/: demo_guided_search.py  demo_invalidity_chart.py  quickstart.py
integrations/word-plugin/: README.md  manifest.xml  serve.py  taskpane.html  taskpane.js
plugins/claude/: .mcp.json
plugins/claude/.claude-plugin/: plugin.json
plugins/claude/agents/: patent-searcher.md
scripts/: build_eval_corpus.py  deploy_gcp.sh  docx_to_png.sh  eval_e2e.sh  index_eval_corpus.py  mcp_smoke_test.py  replay_demo.py  run_invalidity_eval.py
src/patentkit/: __init__.py  config.py
src/patentkit/agents/: __init__.py  _support.py  agentic.py  charting.py  feedback.py  fto_search.py  guided.py  infringement_search.py  invalidity_search.py  planner.py
src/patentkit/analysis/: __init__.py  claims_analysis.py  drafting.py  fto.py  infringement.py  invalidity.py  prompts.py
tests/: fakes.py  test_agents.py  test_analysis.py  test_connectors_jobs.py  test_connectors_parsing.py  test_evals.py  test_formatting.py  test_foundation.py  test_graph.py  test_line_regression.py  test_mcp_http.py  test_mcp_oauth.py  test_notify.py  test_parsing.py  test_search_backends.py  test_tool_loop.py  test_toolset.py  test_toolset_ux.py  test_viz.py
(+67 files in other folders)
