[project]
name = "patentkit"
version = "0.1.0"
description = "Modular open-source toolkit for patent search and analysis — data connectors, canonical data model, plug-and-play search infrastructure, analysis skills, and agentic workflows exposed as Anthropic/OpenAI tools, skills, and plugins."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "patentkit contributors" }]
keywords = ["patents", "prior-art", "invalidity", "fto", "infringement", "search", "rag", "llm", "agents"]
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
elasticsearch = ["elasticsearch>=8.14"]
docx = ["python-docx>=1.1"]
pdf = ["pymupdf>=1.24", "rapidfuzz>=3.9"]
viz = ["scikit-learn>=1.4", "numpy>=1.26", "matplotlib>=3.8"]
mcp = ["mcp>=1.2"]
scrape = ["beautifulsoup4>=4.12", "lxml>=5.0"]
all = [
    "patentkit[anthropic,openai,elasticsearch,docx,pdf,viz,mcp,scrape]",
]

[project.scripts]
patentkit-mcp = "patentkit.integrations.mcp_server:main"

[project.urls]
Homepage = "https://github.com/patentkit/patentkit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patentkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
